# tauri-md

./: .gitignore  Cargo.toml
frontend/: Cargo.toml  index.html
frontend/public/: main.css
frontend/src/: app.rs  main.rs  md.rs
src-tauri/src/: main.rs
